--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+0.1.0
+Added recipes for Sourcelinks
+Sourcelinks can now be mined with pickaxes
+
 0.0.2
 - Moved event method for Sculking Sourcelink activation from ModEvents to SculkingSourcelinkBlockEntity
 - Fixed Lunar Sourcelink being non-functional
